fix fullscreen on ios and bubbling

--- a/src/components/shared/FullscreenModal.module.scss
+++ b/src/components/shared/FullscreenModal.module.scss
@@ -1,5 +1,7 @@
 @use '../../styles/config/mixins' as *;
 
+@include ios-fix('.fullscreenModal');
+
 .fullscreenModal {
     @include flex(column);
 
@@ -10,24 +12,31 @@
     background-color: var(--color-neutral-4);
     overflow-y: scroll;
 
-    .header {
-        @include flex(row, space-between);
-
-        padding: var(--spacing-lg);
-        border-bottom: 1px solid var(--color-neutral-6);
-
-        .title {
-            font-size: calc(var(--font-size-xl));
-            margin: 0;
-            line-height: 1;
-        }
-    }
-
-    .buttonsPanel {
+    .container {
         @include flex(column);
-        padding: var(--spacing-lg);
-        border-top: 1px solid var(--color-neutral-6);
-        gap: var(--spacing-md);
-        margin-top: auto;
+
+        min-height: 100%;
+        position: relative;
+
+        .header {
+            @include flex(row, space-between);
+
+            padding: var(--spacing-lg);
+            border-bottom: 1px solid var(--color-neutral-6);
+
+            .title {
+                font-size: calc(var(--font-size-xl));
+                margin: 0;
+                line-height: 1;
+            }
+        }
+
+        .buttonsPanel {
+            @include flex(column);
+            padding: var(--spacing-lg);
+            border-top: 1px solid var(--color-neutral-6);
+            gap: var(--spacing-md);
+            margin-top: auto;
+        }
     }
 }
